# visio_dei

./: .cproject  .project  CMakeLists.txt
CMakeModules/: FindLuabind.cmake
include/: GLBatch.h  GLShaderManager.h  GLTools.h  GLTriangleBatch.h  algorithms.h  gui.h  input.h  library.h  resource.h  window_2d.h  window_3d.h
src/: CMakeLists.txt  calibratie_schaakbord.cpp  main.cpp  rechthoek.cpp  vind_patroon_schaakbord.cpp
src/gui/: gui.cpp  gui.h  window_2d.cpp  window_2d.h  window_3d.h
src/lua/: lua.h  lua_loader.cpp
