file(GLOB SRC "library/*.cpp")
message("source_code=${SRC}")
add_library(minor_computer_vision SHARED ${SRC})
    
#libraries check, en instellingen
find_package(Lua51 REQUIRED)
if (LUA51_FOUND)
	message("===== LUA Found =====")
    include_directories(${LUA_INCLUDE_DIRS})
    target_link_libraries(minor_computer_vision ${LUA_LIBRARIES})
endif (LUA51_FOUND)
find_package(OpenCV REQUIRED)
if (OpenCV_FOUND)
	message("=====Found OpenCV version ${OpenCV_VERSION} =====")
    include_directories(${OpenCV_INCLUDE_DIRS})
    target_link_libraries(minor_computer_vision ${OpenCV_LIBS})
endif (OpenCV_FOUND)
find_package(SFML COMPONENTS system graphics window REQUIRED)
if (SFML_FOUND)
	message("===== SFML Found =====")
    include_directories(${SFML_INCLUDE_DIRS})
    target_link_libraries(minor_computer_vision ${SFML_LIBRARIES})
endif (SFML_FOUND)
